--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -31,13 +31,24 @@
               "action.system.home"
             ]
           }
+        ],
+        "exported": true,
+        "skills": [
+          {
+            "entities": [
+              "entity.system.home"
+            ],
+            "actions": [
+              "action.system.home"
+            ]
+          }
         ]
       },
       {
         "name": "bookkeeping",
         "srcEntry": "./ets/bookkeeping/bookkeeping.ets",
         "description": "$string:bookkeeping_desc",
-        "icon": "$media:layered_image",
+        "icon": "$media:avatar",
         "label": "$string:bookkeeping_label",
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
